[metadata]
name = hyrpc
summary = HanYu RPC framework
description-file =
    README.md
author = Neil
author-email = neil@aptsec.net
home-page = www.example.org
classifier =
    Environment :: HanYuRPCframework
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: HanYu Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[pbr]
warnerrors = True

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    hyrpc

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
warning-is-error = 1

[build_apiguide]
all_files = 1
build-dir = api-guide/build
source-dir = api-guide/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[wheel]
universal = 1

[extras]
osprofiler =
  osprofiler>=1.4.0 # Apache-2.0
